--- a/css/combinedCss.css
+++ b/css/combinedCss.css
@@ -124,3 +124,24 @@ a {
 /*supplements.html styles here*/
 
 /*about.html styles here*/
+
+#about-panel {
+    width: 960px;
+    margin: 150px auto;
+    background-color: rgba(0,0,0,.6);
+    border-radius: 9px;
+    padding: 30px;
+    text-align: justify;
+}
+#about-panel > #friendly-about > img {
+    width: 250px;
+    height: 250px;
+    border-radius: 9px;
+    float: left;
+    margin: 0 40px 30px 0;
+}
+
+#about-title {
+    text-align: center;
+    margin-bottom: 27px
+}
