Added HTML/CSS for 'next' button in symptoms table, added HTML/CSS for new footer across all pages. Fixed background-height issue.

--- a/css/combinedCss.css
+++ b/css/combinedCss.css
@@ -7,10 +7,12 @@ html, body {
     margin: 0;
     padding: 0;
     color: #FFFFFF;
+    height: 100%;
 }
 
 body {
     background: repeat, url('../images/wild-sea.png'), rgba(256, 256, 256, .3);
+ /* temporary shim... replace with footer scheme later */
 }
 
 a {
@@ -22,6 +24,7 @@ a {
 #background {
     background-color: rgba(256, 256, 256, .5);
     height: 100%;
+    position: relative;
 }
 
 .heading-big {
@@ -41,6 +44,17 @@ a {
 }
 .flavor-text-small {
     font-weight: lighter;
+}
+
+#footer {
+    display: block;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    overflow: hidden;
+    text-align: center;
+    color : #FFFFFF;
+    background-color: #000000;
 }
 
 /*shared 'navbar' styles here*/
@@ -155,6 +169,13 @@ a {
     width: 200px;
     overflow: hidden;
 }
+
+#proceed-button {
+    border-radius: 5px;
+    background-color: #ffa500;
+    vertical-align: middle;
+}
+
 
 /*supplements.html styles here*/
 
