Added HTML/CSS for mock-in of 'Results' page'.

--- a/css/combinedCss.css
+++ b/css/combinedCss.css
@@ -177,7 +177,50 @@ a {
 }
 
 
-/*supplements.html styles here*/
+/*results.html styles here*/
+
+#supplement-container {
+    display: flex;
+    justify-content: space-between;
+    width: 96%;
+    margin: 30px auto;
+}
+
+.supplement-panel {
+    width: 27%;
+    position: relative;
+    max-height: 840px;
+    background-color: rgba(0, 0, 0, .3);
+    border-radius: 9px;
+}
+
+.supplement-panel :nth-child(1) {
+    margin: 0;
+    padding: 15px;
+    text-align: center;
+}
+.supplement-panel :nth-child(3) {
+    text-align: justify;
+    padding: 20px;
+}
+.supplement-panel :nth-child(4) {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+.supplement-panel :nth-child(5) {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+.supplement-image {
+    width: 70%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 12px;
+}
 
 /*about.html styles here*/
 
