Added HTML, CSS, Image for Result Page's "Restart" button.

--- a/css/combinedCss.css
+++ b/css/combinedCss.css
@@ -218,6 +218,23 @@ a {
     border-radius: 12px;
 }
 
+#restart-button {
+    width: 150px;
+    height: 150px;
+    margin: auto 0;
+    background-color: #556B2F;
+    border-radius: 10px;
+    border: 2px solid #000000;
+    box-shadow: -3px -3px 3px #000000 inset;
+}
+
+#restart-img {
+    width: 50%;
+    height: auto;
+    margin: 26%; /*slightly odd image looks better with +1% margin*/
+
+}
+
 /*about.html styles here*/
 
 #about-panel {
