Added results.js, hardened symptoms.js, trivial chagnes to index.js, fixed dictionary errors in massDefinitions, added / updated pictures.
First complete full draft.

--- a/css/combinedCss.css
+++ b/css/combinedCss.css
@@ -246,6 +246,7 @@ a {
     width: 50%;
     height: auto;
     margin: 26%; /*slightly odd image looks better with +1% margin*/
+    cursor: pointer;
 
 }
 
